# sece_reconstruct

./: .gitignore  CLAUDE.md  README.md
.claude/rules/: image-processing-rules.md  python-rules.md  testing-rules.md
.memo/: .memoignore  memosymbols.txt
.memo/.memosymbols-hist/: 2026-02-27_01-13-42.json
.memo/memodocs/: tech_spec_sece-rebuild.md  user_spec_sece-rebuild.md
.memo/memotree/: memofiletree.txt  memofoldertree.txt
.octie/: project.bak.1772143755788  project.bak.1772143848433  project.bak.1772144687951  project.bak.1772144893041  project.bak.1772144922399  project.json
sece-rebuild/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
sece-rebuild/data/: README.md
sece-rebuild/docs/: api_reference.md
sece-rebuild/examples/: demo.ipynb
sece-rebuild/results/: emeg_scores.csv  gmsd_scores.csv  summary_statistics.json
sece-rebuild/scripts/: generate_comparison_charts.py  run_berkeley500_test.py
sece-rebuild/src/sece/: __init__.py  core.py  dct.py  distribution.py  mapping.py  secedct.py  spatial_entropy.py  spatial_histogram.py  weighting.py
sece-rebuild/src/sece/backends/: __init__.py  base.py  numpy_backend.py  torch_backend.py
sece-rebuild/src/sece/baselines/: __init__.py  clahe.py  ghe.py  wthe.py
sece-rebuild/src/sece/cli/: __init__.py  main.py
sece-rebuild/src/sece/color/: __init__.py  hsv.py  lab.py  processor.py  ycbcr.py
sece-rebuild/src/sece/io/: __init__.py  reader.py  writer.py
sece-rebuild/src/sece/metrics/: __init__.py  emeg.py  gmsd.py  ssim.py
sece-rebuild/tests/: __init__.py  conftest.py  test_backends.py  test_baselines.py  test_cli.py  test_color.py  test_dct.py  test_distribution.py  test_emeg.py  test_gmsd.py  test_io.py  test_mapping.py  test_sanity.py  test_sece_core.py  test_secedct.py  test_spatial_entropy.py  test_spatial_histogram.py  test_weighting.py
