[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sece"
version = "0.1.0"
description = "Spatial Entropy-based Contrast Enhancement (SECE) and SECEDCT algorithms for image contrast enhancement"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "SECE-Rebuild Contributors" },
]
keywords = [
    "image-processing",
    "contrast-enhancement",
    "spatial-entropy",
    "dct",
    "histogram-equalization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]
dependencies = [
    "numpy >= 1.20",
    "scipy >= 1.7",
    "opencv-python >= 4.5",
    "scikit-image >= 0.19",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-cov >= 4.0",
    "black >= 23.0",
    "ruff >= 0.1",
    "mypy >= 1.0",
    "types-setuptools >= 69.0",
]
gpu = [
    "torch >= 2.0",
]
metrics = [
    "piq >= 0.7",
]

[project.urls]
Homepage = "https://github.com/sece-rebuild/sece"
Documentation = "https://github.com/sece-rebuild/sece#readme"
Repository = "https://github.com/sece-rebuild/sece.git"
"Bug Tracker" = "https://github.com/sece-rebuild/sece/issues"

[project.scripts]
sece = "sece.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sece = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/sece"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "cv2",
    "scipy.*",
    "skimage.*",
    "piq",
]
ignore_missing_imports = true
